Changes from Tenzin's version:

[x] colour scheme
[x] using font-awesome instead of images
[x] adding more buttons, e.g. reset, had fun, not fun
[ ] fixed-height box around result text
[ ] custom colour picker? (use JS to change CSS)
[x] user pic or icon instead of subscript
[ ] add keyboard shortcuts
[ ] layout with CSS grid
[ ] add winning total (e.g. first to 21)
[ ] add SASS to calculate position of user and comp over score board
[ ] centre colon in scoreboard
[ ] user can enter their own username, which will display in the scorebox and congratulations message at the end