@@ -31,16 +31,13 @@
     <p>New game: get ready to play!</p>
   </div>
   <div class="choices">
-    <div class="choice colour-icons" id="r">
-      <!-- <img src="images/rock.png" alt="R" title="Rock"> -->
+    <div class="choice colour-icons" id="r" title="Rock">
       <i class="fas fa-hand-rock"></i>
     </div>
-    <div class="choice colour-icons" id="p">
-      <!-- <img src="images/paper.png" alt="P" title="Paper"> -->
+    <div class="choice colour-icons" id="p" title="Paper">
       <i class="far fa-hand-paper"></i>
     </div>
-    <div class="choice colour-icons" id="s">
-      <!-- <img src="images/scissors.png" alt="S" title="Scissors"> -->
+    <div class="choice colour-icons" id="s" title="Scissors">
       <i class="far fa-hand-scissors"></i>
     </div>
 
@@ -48,26 +45,20 @@
   <p class="action-message">Make your move...</p>
 
   </div>
-  <!-- <div class="feedback">
-    <div class="fun">
-      <i class="far fa-thumbs-up"></i>
-    </div>
-    <div class="no-fun">
-      <i class="far fa-thumbs-down"></i>
-    </div> -->
-    <div class="reset-button colour-icons" title="Reset scores to 0">
+    <div class="reset-button colour-icons" title="Reset">
       <i class="fas fa-redo"></i>
     </div>
   </div>
 
   <section class="colour-picker">
-    <form action="">
+    <p>Customise your colours:</p>
+    <form action="" class="colour-form">
       <label for="red-picker">R:</label>
-      <input type="range" name="red-picker" id="red-picker" min="0" max="255" step="1">
+      <input type="range" name="red-picker" id="red-picker" min="0" max="255" step="1" value="53">
       <label for="green-picker">G:</label>
-      <input type="range" name="green-picker" id="green-picker" min="0" max="255" step="1">
+      <input type="range" name="green-picker" id="green-picker" min="0" max="255" step="1" value="213">
       <label for="blue-picker">B:</label>
-      <input type="range" name="blue-picker" id="blue-picker" min="0" max="255" step="1">
+      <input type="range" name="blue-picker" id="blue-picker" min="0" max="255" step="1" value="0">
     </form>
   </section>
 
