@@ -3,8 +3,8 @@ Changes from Tenzin's version:
 [x] colour scheme
 [x] using font-awesome instead of images
 [x] adding more buttons, e.g. reset, had fun, not fun
-[ ] fixed-height box around result text
-[ ] custom colour picker? (use JS to change CSS)
+[x] fixed height of result text
+[x] custom colour picker
 [x] user pic or icon instead of subscript
 [ ] add keyboard shortcuts
 [ ] layout with CSS grid
@@ -12,3 +12,4 @@ Changes from Tenzin's version:
 [ ] add SASS to calculate position of user and comp over score board
 [ ] centre colon in scoreboard
 [ ] user can enter their own username, which will display in the scorebox and congratulations message at the end
+[ ] add history text-area to log all moves so far
